fixed TOC overlapping issue on image

--- a/css/customstyles.css
+++ b/css/customstyles.css
@@ -966,8 +966,8 @@ span.soft {
 
 @media only screen and (min-width: 900px), only screen and (min-device-width: 900px) {
     .col-md-9 img {
-        max-width: 700px;
-        max-height: 700px;
+        max-width: 100%;
+        max-height: 100%;
     }
 }
 
